--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "JATE",
+  "name": "JIT",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
+  "license": "MIT",
   "scripts": {
     "start:dev": "concurrently \"cd client && npm run build\" \"cd server && npm run server\" ",
     "start": "npm run build && cd server && node server.js",
@@ -11,15 +11,10 @@
     "install": "cd client && npm install",
     "client": "cd client && npm start"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1",
-    "if-env": "^1.0.4"
+    "express": "^4.17.1"
   },
   "devDependencies": {
-    "concurrently": "^5.2.0",
-    "nodemon": "^2.0.4"
+    "concurrently": "^5.2.0"
   }
 }
